@@ -3,6 +3,7 @@ package com.arxyt.colonypathingedition.mixins.minecolonies.lumberjack;
 import com.arxyt.colonypathingedition.api.AbstractEntityAIInteractExtra;
 import com.arxyt.colonypathingedition.api.workersetting.BuildingLumberjackExtra;
 import com.arxyt.colonypathingedition.core.config.PathingConfig;
+import com.arxyt.colonypathingedition.core.util.DistanceUtils;
 import com.arxyt.colonypathingedition.mixins.minecolonies.accessor.AbstractEntityAIInteractAccessor;
 import com.minecolonies.api.entity.ai.statemachine.states.IAIState;
 import com.minecolonies.api.inventory.InventoryCitizen;
@@ -28,7 +29,6 @@ import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.minecolonies.api.entity.ai.statemachine.states.AIWorkerState.*;
 
@@ -39,10 +39,10 @@ public abstract class EntityAIWorkLumberjackMixin extends AbstractEntityAICrafti
 
     @Shadow(remap = false) protected abstract boolean mineIfEqualsBlockTag(List<BlockPos> blockPositions, TagKey<Block> tag);
 
-    @Unique BlockPos thisTree = null;
-    @Unique BlockPos lastTree = null;
-    @Unique int gatherState = 0;
-    @Unique BlockPos itemPos = null;
+    @Unique BlockPos thisTree;
+    @Unique BlockPos lastTree;
+    @Unique int gatherState;
+    @Unique BlockPos itemPos;
 
     public EntityAIWorkLumberjackMixin(@NotNull JobLumberjack job) {
         super(job);
@@ -222,7 +222,7 @@ public abstract class EntityAIWorkLumberjackMixin extends AbstractEntityAICrafti
                 .filter(item -> item != null && item.isAlive() &&
                         (!item.getPersistentData().contains("PreventRemoteMovement") || !item.getPersistentData().getBoolean("PreventRemoteMovement")) &&
                         isItemWorthPickingUp(item.getItem()))
-                .collect(Collectors.toList());
+                .toList();
         for (ItemEntity item: farItems) {
             item.absMoveTo(worker.getBlockX() + 0.5d,worker.getBlockY(),worker.getBlockZ() + 0.5d);
         }
@@ -240,7 +240,7 @@ public abstract class EntityAIWorkLumberjackMixin extends AbstractEntityAICrafti
                 .filter(item -> item != null && item.isAlive() &&
                         (!item.getPersistentData().contains("PreventRemoteMovement") || !item.getPersistentData().getBoolean("PreventRemoteMovement")) &&
                         isItemWorthPickingUp(item.getItem()))
-                .collect(Collectors.toList());
+                .toList();
         if(farItems.isEmpty()){
             return false;
         }
@@ -320,7 +320,7 @@ public abstract class EntityAIWorkLumberjackMixin extends AbstractEntityAICrafti
      */
     @Inject(method = "prepareForWoodcutting", at = @At("RETURN"), remap = false, cancellable = true)
     private void remasterPrepareOrderForWoodcutting(CallbackInfoReturnable<IAIState> cir){
-        if(cir.getReturnValue() == LUMBERJACK_SEARCHING_TREE ){
+        if(cir.getReturnValue() == LUMBERJACK_SEARCHING_TREE && (building.shouldRestrict() || lastTree == null || !(DistanceUtils.dist(building.getPosition(),lastTree) > 50))){
             cir.setReturnValue(LUMBERJACK_GATHERING);
         }
     }
